Fix vh issue on mobile browsers
vh on mobile phones includes the bars present on the screen, hiding some
elements like our navbar.

--- a/app/assets/stylesheets/pages/_tastes.scss
+++ b/app/assets/stylesheets/pages/_tastes.scss
@@ -7,8 +7,7 @@
 
     grid-template-rows: auto 1fr;
     height: 100vh;
-
-
+    height: calc(var(--vh, 1vh) * 100);
 
     .scrollable {
       .logo {
